# rewind

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  RELEASE.md  TODO.md
docker/: Dockerfile
docker/msvc/: Dockerfile
examples/CVE-2020-17087/: .gitignore  README.md
examples/CVE-2020-17087/cng/: Cargo.toml
examples/CVE-2020-17087/cng/src/: main.rs
examples/CVE-2020-17087/mutations/: none.yaml  random.yaml  structured.yaml
examples/CVE-2020-17087/rewind-cng/: .gitignore  Cargo.toml
examples/CVE-2020-17087/rewind-cng/src/: main.rs
examples/CVE-2020-17087/snapshots/17763.1.amd64fre.rs5_release.180914-1434/cng/ConfigIoHandler_Safeguarded/: context.json  params.json  snapshot.json
examples/CVE-2020-17087/snapshots/17763.1.amd64fre.rs5_release.180914-1434/cng/_ConfigurationFunctionIoHandler/: context.json  params.json  snapshot.json
rewind-bochs/: .gitignore  Cargo.toml
rewind-bochs/src/: bochs.rs  lib.rs
rewind-bochs/tests/: common.rs  cve_2020_17087.rs  sdb.rs
rewind-bochs/tests/fixtures/sdb/: context.json
rewind-cli/: Cargo.toml
rewind-cli/src/: cli.rs  helpers.rs  lib.rs  main.rs
rewind-cli/src/commands/: fuzz.rs  mod.rs  mutation.rs  snapshot.rs  trace.rs
rewind-core/: Cargo.toml
rewind-core/src/: corpus.rs  error.rs  fuzz.rs  helpers.rs  lib.rs  mem.rs  mutation.rs  snapshot.rs  trace.rs  watch.rs
rewind-core/tests/fixtures/: generated.yaml  test.yaml  test2.yaml
rewind-coverage/: Cargo.toml
rewind-coverage/src/: main.rs  pdbstore.rs  pe.rs  system.rs
rewind-explorer/: Cargo.toml
rewind-explorer/src/: main.rs
rewind-fuzzer/: Cargo.toml
rewind-fuzzer/src/: cli.rs  main.rs
rewind-kvm/: Cargo.toml
rewind-kvm/src/: kvm.rs  lib.rs
rewind-kvm/tests/: RtlInitUnicodeString.json  kvm.rs
rewind-monitor/: Cargo.toml
rewind-monitor/src/: main.rs
rewind-snapshot/: Cargo.toml
rewind-snapshot/src/: dump.rs  lib.rs
rewind-system/: Cargo.toml
rewind-system/src/: lib.rs  pdbstore.rs  pe.rs  system.rs
rewind-tracer/: Cargo.toml
rewind-tracer/src/: cli.rs  main.rs
rewind-tui/: Cargo.toml
rewind-tui/src/: app.rs  lib.rs  main.rs  ui.rs  widget.rs
rewind-whvp/: Cargo.toml
rewind-whvp/src/: lib.rs  trace.rs  whvp.rs
rewind-whvp/tests/: common.rs  cve_2020_17087.rs
rewind-whvp/tests/fixtures/CVE-2020-17087/: input.yaml
scripts/: ida_get_basic_blocks.py  pykd_dump_context.py
tools/windbgext/: Cargo.toml  README.md
tools/windbgext/src/: lib.rs
whvp-sys/: Cargo.toml  build.rs  wrapper.h
whvp-sys/src/: lib.rs
