[package]
name = "rewind-bochs"
version = "0.1.0"
authors = ["Damien Aumaitre <daumaitre@quarkslab.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
log = { version = "0.4.8", features = ["release_max_level_info"] }
bochscpu = { path = "../vendor/bochscpu" }
rewind-core = { path = "../rewind-core" }
lazy_static = "1.4.0"

[dev-dependencies]
rewind-snapshot = { path = "../rewind-snapshot" }

