[package]
name = "rewind-cli"
version = "0.1.0"
authors = ["Damien Aumaitre <daumaitre@quarkslab.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
term = "0.6.1"
anyhow = "1.0.28"
clap = "3.0.0-beta.2" 

rewind-core = { path = "../rewind-core" }
rewind-bochs = { path = "../rewind-bochs" }
rewind-whvp = { path = "../rewind-whvp" }
rewind-snapshot = { path = "../rewind-snapshot" }
rewind-system = { path = "../rewind-system" }
rewind-tui = { path = "../rewind-tui" }
flume = "0.10.0"
