[package]
name = "rewind-cli"
version = "0.1.0"
authors = ["Damien Aumaitre <daumaitre@quarkslab.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
term = "0.6.1"
clap = "3.0.0-beta.2" 
color-eyre = "0.5.10"

rewind-core = { path = "../rewind-core" }
rewind-bochs = { path = "../rewind-bochs" }
rewind-snapshot = { path = "../rewind-snapshot" }
rewind-system = { path = "../rewind-system" }
rewind-tui = { path = "../rewind-tui" }

zydis = "3.1.1"
indicatif = "0.15.0"
memmap = "0.7.0"
flume = "0.10.0"
chrono = "0.4.19"

[target.'cfg(windows)'.dependencies]
rewind-whvp = { path = "../rewind-whvp" }

[target.'cfg(unix)'.dependencies]
rewind-kvm = { path = "../rewind-kvm" }

[[bin]]
name = "rewind"
doc = false
path = "src/main.rs"
