[package]
name = "rewind-core"
version = "0.1.0"
authors = ["Damien Aumaitre <daumaitre@quarkslab.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
ni_rs = { path = "../vendor/ni-rs" }
crossbeam-channel = "0.3.9"
notify = "=5.0.0-pre.1"
fnv = "1"
bitflags = "1"
serde_json = "1.0.51"
serde = { version = "1.0.106", features = ["derive"] }
anyhow = "1.0.28"
custom_debug_derive = "0.4.0"