[package]
name = "rewind-core"
version = "0.1.0"
authors = ["Damien Aumaitre <daumaitre@quarkslab.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
crossbeam-channel = "0.3.9"
notify = "4.0.12"
fnv = "1"
bitflags = "1"
serde_json = "1.0.51"
serde = { version = "1.0.106", features = ["derive"] }
anyhow = "1.0.28"
custom_debug_derive = "0.4.0"
basic_mutator = { path = "../vendor/basic_mutator" }
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
