[package]
name = "rewind-core"
version = "0.1.0"
authors = ["Damien Aumaitre <daumaitre@quarkslab.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
notify = "4.0.12"
fnv = "1"
serde_json = "1.0.51"
serde = { version = "1.0.106", features = ["derive"] }
serde_yaml = "0.8.17"
rand = { version = "0.8.3", features = ["std"] }
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
thiserror = "1.0.23"

[dev-dependencies]
tempdir = "0.3.7"
pretty-hex = "0.2.1"
