[package]
name = "rewind-kvm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kvm-bindings = "0.5.0"
kvm-ioctls = "0.10.0"
libc = "0.2.101"
thiserror = "1.0.23"

nix = "0.17"
userfaultfd = { path = "vendor/userfaultfd-rs" }
rewind-core = { path = "../rewind-core" }
rewind-snapshot = { path = "../rewind-snapshot" }

[dev-dependencies]
pretty_assertions = "0.7.2"
pretty-hex = "0.2.1"
difference = "2.0.0"
