[package]
name = "rewind-kvm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kvm-bindings = "0.5.0"
kvm-ioctls = "0.10.0"
libc = "0.2.101"
thiserror = "1.0.23"

nix = "0.17"
userfaultfd = "0.3.2"
rewind-core = { path = "../rewind-core" }
rewind-snapshot = { path = "../rewind-snapshot" }
vm-memory = { version = "0.6.0", features = ["backend-mmap"] }

[dev-dependencies]
pretty_assertions = "0.7.2"
pretty-hex = "0.2.1"
difference = "2.0.0"
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
base64 = "0.13.0"
bitmask-enum = "1.1.0"
bitflags = "1.3.2"
