[package]
name = "rewind-snapshot"
version = "0.1.0"
authors = ["Damien Aumaitre <daumaitre@quarkslab.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
log = "0.4.8"
memmap = "0.7.0"
rewind-core = { path = "../rewind-core" }
dmp = { path = "vendor/dmp" }
