[package]
name = "rewind-snapshot"
version = "0.1.0"
authors = ["Damien Aumaitre <daumaitre@quarkslab.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
zerocopy = "0.3.0"
thiserror = "1.0.23"
rewind-core = { path = "../rewind-core" }
memmap = "0.7.0"
serde_json = "1.0.51"
serde = { version = "1.0.106", features = ["derive"] }

