[package]
name = "rewind-system"
version = "0.1.0"
authors = ["Damien Aumaitre <daumaitre@quarkslab.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdb = "0.7.0"
reqwest = { version = "0.11.4", features = ["blocking"] }
thiserror = "1.0.29"
zerocopy = "0.5.0"

rewind-snapshot = { path = "../rewind-snapshot" }
rewind-core = { path = "../rewind-core" }
