[package]
name = "rewind-tracer"
version = "0.1.0"
authors = ["Damien Aumaitre <daumaitre@quarkslab.com>"]
edition = "2018"

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }
serde_json = "1.0.51"
serde = { version = "1.0.106", features = ["derive"] }
log = { version = "0.4.8", features = ["release_max_level_info"] }
simple_logger = "1.6.0"
custom_debug = "0.5.0"
anyhow = "1.0.28"
rewind-core = { path = "../rewind-core" }
rewind-snapshot = { path = "../rewind-snapshot" }
rewind-cli = { path = "../rewind-cli" }

