[package]
name = "rewind-tui"
version = "0.1.0"
authors = ["Damien Aumaitre <daumaitre@quarkslab.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.18.2"
tui = { git = "https://github.com/fdehau/tui-rs", features = ["crossterm"], default-features = false }
thiserror = "1.0.22"

rewind-core = { path = "../rewind-core" }
