[package]
name = "rewind-tui"
version = "0.1.0"
authors = ["Damien Aumaitre <daumaitre@quarkslab.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.18.2"
tui = { git = "https://github.com/fdehau/tui-rs", features = ["crossterm"], default-features = false }
thiserror = "1.0.22"
memmap = "0.7.0"
flume = "0.10.0"
chrono = "0.4.19"

rewind-core = { path = "../rewind-core" }
rewind-system = { path = "../rewind-system" }
rewind-snapshot = { path = "../rewind-snapshot" }
rewind-bochs = { path = "../rewind-bochs" }
