[package]
name = "rewind-whvp"
version = "0.1.0"
authors = ["Damien Aumaitre <daumaitre@quarkslab.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
log = "0.4.8"
zydis = "3.0"

whvp-sys = { path = "../whvp-sys" }
rewind-core = { path = "../rewind-core" }

[dev-dependencies]
pretty_assertions = "0.6.1"
