[package]
name = "rewind-whvp"
version = "0.1.0"
authors = ["Damien Aumaitre <daumaitre@quarkslab.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
log = "0.4.8"
zydis = "3.0"

rewind-core = { path = "../rewind-core" }

[target.'cfg(windows)'.dependencies]
whvp-sys = { path = "../whvp-sys" }

[dev-dependencies]
pretty_assertions = "0.6.1"
rewind-snapshot = { path = "../rewind-snapshot" }
flate2 = "1.0.22"
tar = "0.4.37"


